--- a/5.html
+++ b/5.html
@@ -11,8 +11,8 @@ Student.points = {
 
 }
 Student1 = {
-name: "Nurbek",
-surname: "Nurlanbekyly"
+name: "Gulaiym",
+surname: "Tazhibayeva"
 }
 var array = []
 array.push(Student)
@@ -22,7 +22,7 @@ console.log(Student["surname"]);
 console.log(Student.points.js);
 delete Student.name;
 console.log(Student.name); 
-Student.name="Ersultan"
+Student.name="Parmenkul"
 console.log(Student.name);
 function calc(Student){
 for(var lenght in Student.points){
